add file ayodhya.html

--- a/ayodhya.html
+++ b/ayodhya.html
@@ -1,24 +1,25 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bodh Gaya - Site of Enlightenment</title>
+    <title>Ayodhya Ram Mandir - Abode of Lord Rama</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <style>
-        /* --- Color Variables for Dark Neon Theme (Adjusted for Buddhist/Peace theme) --- */
+        /* --- Color Variables for Ram Mandir Theme (Saffron/Gold/Maroon) --- */
         :root {
             --dark-bg-start: #1f1c2c; /* Deep Dark */
-            --dark-bg-end: #928DAB; /* Dark Grey/Purple */
+            --dark-bg-end: #3b2f4c; /* Dark Violet/Purple for a rich background */
             --text-light: #f0f8ff;
             --text-muted: #d1d5db;
-            --neon-saffron: #FFD700; /* Golden Yellow for Saffron/Enlightenment */
-            --neon-maroon: #800000; /* Deep Maroon/Red for depth */
+            --neon-saffron: #FFB300; /* Rich Gold/Saffron for divineness */
+            --neon-maroon: #A52A2A; /* Deep Brown/Maroon for traditional richness */
             --card-dark: rgba(30, 27, 38, 0.9);
             --card-border: rgba(255, 255, 255, 0.1);
-            --accent-glow: 0 0 15px rgba(255, 215, 0, 0.7);
+            --accent-glow: 0 0 15px rgba(255, 179, 0, 0.7); /* Gold glow */
         }
 
         /* Base Styles */
@@ -50,7 +51,7 @@
             text-decoration: none;
         }
         .back-btn:hover {
-            color: var(--neon-maroon);
+            color: #FFD700; /* Brighter Gold */
         }
         .back-btn span {
             margin-right: 8px;
@@ -67,7 +68,7 @@
             font-size: 3.5rem;
             margin: 0 0 10px;
             color: var(--neon-saffron);
-            text-shadow: 0 0 15px rgba(255, 215, 0, 0.8);
+            text-shadow: 0 0 15px rgba(255, 179, 0, 0.8);
             font-weight: 700;
         }
 
@@ -157,7 +158,7 @@
         }
 
         .explore-link:hover {
-            background: #a52a2a; /* Brown/Maroon on hover */
+            background: #8B0000; /* Darker Red/Maroon on hover */
             transform: scale(1.05);
         }
 
@@ -179,75 +180,75 @@
         </a>
 
         <header data-aos="fade-down">
-            <h1>बोधगया - बुद्धत्व की भूमि 🧘</h1>
-            <p>यह वह पवित्र स्थान है जहाँ राजकुमार **सिद्धार्थ गौतम** ने बोधि वृक्ष के नीचे ज्ञान (Enlightenment) प्राप्त किया और भगवान बुद्ध कहलाए। यह दुनिया भर के बौद्धों के लिए शांति, ध्यान और आध्यात्मिकता का केंद्र है। **बुद्धं शरणं गच्छामि** ☸️</p>
+            <h1>अयोध्या राम मंदिर - राम लला का धाम 🚩</h1>
+            <p>यह वह पवित्र स्थान है जहाँ **भगवान श्री राम** का भव्य मंदिर बना है। यह सत्य, धर्म और सनातन संस्कृति का प्रतीक है। यह करोड़ों भक्तों के लिए आस्था, श्रद्धा और गौरव का केंद्र है। **जय श्री राम** 🙏</p>
         </header>
 
         <section class="places-grid">
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="https://tse2.mm.bing.net/th/id/OIP.xm3LsqlcSTWnLYBp4Uz53wHaE7?pid=Api&P=0&h=180" alt="Mahabodhi Temple">
+                    <img src="https://tse3.mm.bing.net/th/id/OIP.iF-5N7iW0_9v4JgJ6u4j2QHaE7?pid=Api&P=0&h=180" alt="Ram Mandir Main Structure">
                 </div>
                 <div class="card-content">
-                    <h3>Mahabodhi Temple</h3>
-                    <p>A UNESCO World Heritage site and the primary temple marking the exact spot where Buddha attained enlightenment. Its ancient architecture is deeply revered globally.</p>
-                    <a href="#" class="explore-link">Temple Darshan</a>
+                    <h3>The Main Temple Structure</h3>
+                    <p>Built in the traditional **Nagara style** of architecture, the grand three-storied temple is constructed entirely of sandstone, without the use of steel, symbolizing eternal craftsmanship.</p>
+                    <a href="#" class="explore-link">Darshan Timings</a>
                 </div>
             </div>
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="https://tse4.mm.bing.net/th/id/OIP.tVQxJuTtkDEtqLyVNsaDjQHaE8?pid=Api&P=0&h=180" alt="Bodhi Tree">
+                    <img src="https://tse4.mm.bing.net/th/id/OIP.9F_71H9H8Yl3Y7R9p0r2vAHaEK?pid=Api&P=0&h=180" alt="Ram Lalla Idol">
                 </div>
                 <div class="card-content">
-                    <h3>The Sacred Bodhi Tree</h3>
-                    <p>A descendant of the original tree under which Siddhartha Gautama meditated and achieved 'Bodhi' (Enlightenment). The area is constantly filled with meditating monks and devotees.</p>
-                    <a href="#" class="explore-link">Meditation Spot</a>
+                    <h3>Ram Lalla's Idol</h3>
+                    <p>The consecrated black granite idol of **Ram Lalla** (Child Rama), carved by Arun Yogiraj, is placed in the Garbhagriha (sanctum sanctorum), radiating divine innocence and power.</p>
+                    <a href="#" class="explore-link">Pran Pratishtha History</a>
                 </div>
             </div>
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <div class="card-image-container">
-                    <img src="https://tse4.mm.bing.net/th/id/OIP.-rxqMYK0TmiUi2Pn3KfOiwHaE3?pid=Api&P=0&h=180" alt="Great Buddha Statue">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.4tB-sIu_1E6T1Zz4jQ4O_gHaE7?pid=Api&P=0&h=180" alt="Sarayu River Ghat">
                 </div>
                 <div class="card-content">
-                    <h3>Great Buddha Statue (80-foot)</h3>
-                    <p>An impressive 80-foot high statue of the Buddha in a meditative posture, inaugurated by the 14th Dalai Lama. It is a major landmark and a stunning piece of modern art.</p>
-                    <a href="#" class="explore-link">Statue Details</a>
+                    <h3>The Sacred Sarayu River</h3>
+                    <p>Flowing near the temple, the **Sarayu River** holds immense religious significance as it is mentioned in the Ramayana. Devotees take a holy dip before visiting the temple.</p>
+                    <a href="#" class="explore-link">Ghat Location</a>
                 </div>
             </div>
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="https://tse4.mm.bing.net/th/id/OIP.z33fLcm-f_m-AtfvE2qXiAAAAA?pid=Api&P=0&h=180"  alt="Vishnupad Temple">
+                    <img src="https://tse1.mm.bing.net/th/id/OIP.W9h8sRj8h9sN7Gj1L-77-gHaE7?pid=Api&P=0&h=180" alt="Hanuman Garhi">
                 </div>
                 <div class="card-content">
-                    <h3>Vishnupad Temple (Gaya)</h3>
-                    <p>Located nearby in Gaya, this famous Hindu temple contains the footprint of Lord Vishnu. It is an important site for Pind Daan rituals, highlighting the area's rich pilgrimage history.</p>
-                    <a href="#" class="explore-link">Gaya Pilgrimage</a>
+                    <h3>Hanuman Garhi Temple</h3>
+                    <p>A major fort-style temple dedicated to Lord Hanuman, believed to be the protector of Ayodhya. It is traditional for devotees to visit this temple before heading to Ram Mandir.</p>
+                    <a href="#" class="explore-link">Jai Hanuman</a>
                 </div>
             </div>
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="https://tse3.mm.bing.net/th/id/OIP.sX41SQgjmGGDmig2Tjq2jwHaFX?pid=Api&P=0&h=180" alt="International Monasteries">
+                    <img src="https://tse3.mm.bing.net/th/id/OIP.36k8uBv0x6y-bOaQ5I4MzwHaEK?pid=Api&P=0&h=180" alt="Dashrath Mahal">
                 </div>
                 <div class="card-content">
-                    <h3>International Monasteries</h3>
-                    <p>Bodh Gaya hosts monasteries built by various Buddhist countries (Japan, Thailand, Tibet, etc.), each showcasing unique architectural styles and cultural traditions.</p>
-                    <a href="#" class="explore-link">Monastery Tour</a>
+                    <h3>Dashrath Mahal</h3>
+                    <p>The palace believed to be the original residence of King Dashrath, Lord Rama's father. The current structure houses a beautiful shrine to Lord Rama, Sita, Lakshman, and Hanuman.</p>
+                    <a href="#" class="explore-link">Palace History</a>
                 </div>
             </div>
 
-             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
+            <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                 <div class="card-image-container">
-                    <img src="https://tse3.mm.bing.net/th/id/OIP.UMhvLAEoHM9e0r1uL0FKEwHaE7?pid=Api&P=0&h=180" alt="Sujata Stupa">
+                    <img src="https://tse3.mm.bing.net/th/id/OIP.YjT5T3H1j-X1Gg0G3o9v3QHaEK?pid=Api&P=0&h=180" alt="Ram Mandir Campus Temples">
                 </div>
                 <div class="card-content">
-                    <h3>Sujata Stupa</h3>
-                    <p>Built in honor of Sujata, the village woman who offered milk-rice to Siddhartha Gautama, ending his severe austerity and leading him to the middle path to Enlightenment.</p>
-                    <a href="#" class="explore-link">Stupa History</a>
+                    <h3>Campus Temples & Kuber Tila</h3>
+                    <p>The temple complex includes smaller temples dedicated to other deities like Ganesh, Surya, Shiv, and also the ancient Kuber Tila, expanding the spiritual experience for visitors.</p>
+                    <a href="#" class="explore-link">Campus Map</a>
                 </div>
             </div>
 
