--- a/project.html
+++ b/project.html
@@ -494,7 +494,8 @@
     </section>
 
     <section class="suggested-trips" data-aos="fade-up" data-aos-duration="1000">
-        <h2>🌍 Suggested Trips</h2>
+        <h2>🌍 Some of Our Suggested Trips</h2>
+        <h3> Must Explore These Destinations</h3>
         <p>Discover some of our handpicked destinations to make your travel unforgettable.</p>
     
         <div class="trips-container">
@@ -516,7 +517,7 @@
             <a href="sunny.html" data-aos="fade-up">
                 <div class="trip-card-container">
                     <div class="trip-card front">
-                        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
+                        <img src="https://tse4.mm.bing.net/th/id/OIP.sfOhqj3XmYL9Ing62XExaAHaE5?pid=Api&P=0&h=180" alt="Goa Adventure">
                         <h3>Best Choices for Sunny Shores </h3><br>
                         <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
                     </div>
