add file gulmarg.html

--- a/ayodhya.html
+++ b/ayodhya.html
@@ -188,7 +188,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="https://tse3.mm.bing.net/th/id/OIP.iF-5N7iW0_9v4JgJ6u4j2QHaE7?pid=Api&P=0&h=180" alt="Ram Mandir Main Structure">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.eqr3kvqgZn6KCF0iaNamwQHaEK?pid=Api&P=0&h=180" alt="Ram Mandir Main Structure">
                 </div>
                 <div class="card-content">
                     <h3>The Main Temple Structure</h3>
@@ -199,7 +199,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="https://tse4.mm.bing.net/th/id/OIP.9F_71H9H8Yl3Y7R9p0r2vAHaEK?pid=Api&P=0&h=180" alt="Ram Lalla Idol">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.yHFupTBBYBKq55oZfGBpPgHaEK?pid=Api&P=0&h=180" alt="Ram Lalla Idol">
                 </div>
                 <div class="card-content">
                     <h3>Ram Lalla's Idol</h3>
@@ -210,7 +210,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <div class="card-image-container">
-                    <img src="https://tse2.mm.bing.net/th/id/OIP.4tB-sIu_1E6T1Zz4jQ4O_gHaE7?pid=Api&P=0&h=180" alt="Sarayu River Ghat">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.qrl0w4gBzRmhI7bWU4FmZAHaEK?pid=Api&P=0&h=180" alt="Sarayu River Ghat">
                 </div>
                 <div class="card-content">
                     <h3>The Sacred Sarayu River</h3>
@@ -221,7 +221,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="https://tse1.mm.bing.net/th/id/OIP.W9h8sRj8h9sN7Gj1L-77-gHaE7?pid=Api&P=0&h=180" alt="Hanuman Garhi">
+                    <img src="https://tse1.mm.bing.net/th/id/OIP.aAIYgBtNEFBTGNPk8MXKEwHaE6?pid=Api&P=0&h=180" alt="Hanuman Garhi">
                 </div>
                 <div class="card-content">
                     <h3>Hanuman Garhi Temple</h3>
@@ -232,7 +232,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="https://tse3.mm.bing.net/th/id/OIP.36k8uBv0x6y-bOaQ5I4MzwHaEK?pid=Api&P=0&h=180" alt="Dashrath Mahal">
+                    <img src="https://tse2.mm.bing.net/th/id/OIP.8SB0tkahlA-fOCsv4kokagHaD5?pid=Api&P=0&h=180" alt="Dashrath Mahal">
                 </div>
                 <div class="card-content">
                     <h3>Dashrath Mahal</h3>
@@ -243,7 +243,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                 <div class="card-image-container">
-                    <img src="https://tse3.mm.bing.net/th/id/OIP.YjT5T3H1j-X1Gg0G3o9v3QHaEK?pid=Api&P=0&h=180" alt="Ram Mandir Campus Temples">
+                    <img src="https://up.yimg.com/ib/th/id/OIP.pYy0VliKC8RQy8r1Hd-j_gHaD4?pid=Api&rs=1&c=1&qlt=95&w=183&h=95" alt="Ram Mandir Campus Temples">
                 </div>
                 <div class="card-content">
                     <h3>Campus Temples & Kuber Tila</h3>
