change stylling of mumbai.html

--- a/kashmir.html
+++ b/kashmir.html
@@ -199,7 +199,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="https://media.cnn.com/api/v1/images/stellar/prod/240112092135-02-gulmarg-snow.jpg?c=original" alt="Gulmarg Gondola">
+                    <img src="https://tse3.mm.bing.net/th/id/OIP.gX3RttYyYlSJ-PQEtpoOYQHaGK?pid=Api&P=0&h=180" alt="Gulmarg Gondola">
                 </div>
                 <div class="card-content">
                     <h3>Gulmarg (Meadow of Flowers)</h3>
@@ -243,7 +243,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                 <div class="card-image-container">
-                    <img src="https://tse1.mm.bing.net/th/id/OIP.paIJfjJ29uwpvS-wDA02UgHaFj?pid=Api&P=0&h=180" alt="Sonmarg">
+                    <img src="https://tse4.mm.bing.net/th/id/OIP.RXp29MDWlAESUqIoumk5JgHaE8?pid=Api&P=0&h=180" alt="Sonmarg">
                 </div>
                 <div class="card-content">
                     <h3>Sonmarg (Meadow of Gold)</h3>
