add goa and kerala.html

--- a/chennai.html
+++ b/chennai.html
@@ -179,8 +179,8 @@
 <body>
     <div class="wrap">
         
-        <a href="mumbai.html" class="back-btn">
-            <span>←</span> Back to City of Dreams
+        <a href="sunny.html" class="back-btn">
+            <span>←</span> Back to Sunny Shores
         </a>
         
         <header data-aos="fade-down">
