add paris , leh-ladhakh and dubai explore in home page + some reviews of people

--- a/pilgrimage.html
+++ b/pilgrimage.html
@@ -395,11 +395,11 @@
             },
             // NEW 6th Card Added Here
             {
-                name: 'Bodh Gaya',
-                short: 'Mahabodhi Temple — site of Buddha\'s enlightenment.',
-                more: 'Bodh Gaya is the most sacred site in Buddhism, featuring the Mahabodhi Temple and the Bodhi Tree, where Siddhartha Gautama attained enlightenment. A hub for peace and meditation.',
-                page: 'Bodhgaya.html'
-            }
+    "name": "Ayodhya",
+    "short": "Ram Janmabhoomi — The sacred birthplace of Lord Rama.",
+    "more": "Ayodhya is one of the seven most sacred cities for Hindus (*Sapta Puri*). It is the revered birthplace of Lord Rama, featuring the newly consecrated **Ram Mandir** and historical ghats on the Sarayu river.",
+    "page": "ayodhya.html"
+}
         ];
 
         const grid = document.getElementById('grid');
