add dubai.html file

--- a/paris.html
+++ b/paris.html
@@ -487,6 +487,9 @@
     <header class="navbar">
         <div class="logo">Plan & Go ❤️</div>
         <nav id="navbar-links">
+            <a href="#itinerary">Itinerary</a> 
+            <a href="#cost-section">Cost</a> 
+            <a href="#cafe-section">Cafes</a> 
             <a href="project.html">Home</a>
             <a href="login.html">Login</a>
             <a href="signup.html">Signup</a>
@@ -545,6 +548,7 @@
                 <h4><div class="heart" aria-hidden="true" style="margin-right: 10px; transform: scale(0.8) rotate(-45deg);"></div>Day 3: Royal Grandeur & Parisian Flair</h4>
                 <ul>
                     <li>✦ Morning: Day trip to the **Palace of Versailles** (book tickets in advance).</li>
+
                     <li>✦ Afternoon: Return to Paris. Shop on **Champs-Élysées**, see Arc de Triomphe.</li>
                     <li>✦ Evening: Farewell dinner at a charming bistro, and a final **Eiffel Tower sparkle show**.</li>
                 </ul>
