add file ladakh.html

--- a/project.html
+++ b/project.html
@@ -623,6 +623,7 @@
 
         <div class="guide-container">
             <div class="guide-card" data-aos="fade-up" data-aos-delay="100">
+                <a href="paris.html">
                 <img src="https://tse3.mm.bing.net/th/id/OIP.Gd0-N3d_YsNOUDQnx0PQ9wHaE8?pid=Api&P=0&h=180" alt="Paris Guide">
                 <div class="guide-card-content">
                     <h4>Paris: City of Love</h4>
@@ -632,6 +633,7 @@
             </div>
 
             <div class="guide-card" data-aos="fade-up" data-aos-delay="300">
+                <a href="ladakh.html">
                 <img src="https://tse2.mm.bing.net/th/id/OIP.V2qAkbpGexnnPyLR2nBqnQHaE7?pid=Api&P=0&h=180" alt="Leh Ladakh Guide">
                 <div class="guide-card-content">
                     <h4>Leh-Ladakh: High Roads</h4>
@@ -641,6 +643,7 @@
             </div>
 
             <div class="guide-card" data-aos="fade-up" data-aos-delay="500">
+                <a href="dubai.html">
                 <img src="https://tse4.mm.bing.net/th/id/OIP.Pi0weBSa0naErcYfA4tkuwHaEJ?pid=Api&P=0&h=180" alt="Dubai Guide">
                 <div class="guide-card-content">
                     <h4>Dubai: Modern Marvel</h4>
