add changes in paris, dubai and ladakh.html

--- a/Banaras.html
+++ b/Banaras.html
@@ -181,7 +181,7 @@
 
         <header data-aos="fade-down">
             <h1>काशी (बनारस) - मोक्ष की नगरी 🔱</h1>
-            <p>यह भगवान शिव का निवास स्थान, दुनिया के सबसे प्राचीन शहरों में से एक है। यहाँ जीवन और मृत्यु, भक्ति और मोक्ष का संगम गंगा के घाटों पर होता है। **हर हर महादेव!** 🕉️</p>
+            <p>यह भगवान शिव का निवास स्थान, दुनिया के सबसे प्राचीन शहरों में से एक है। यहाँ जीवन और मृत्यु, भक्ति और मोक्ष का संगम गंगा के घाटों पर होता है। हर हर महादेव! 🕉️</p>
         </header>
 
         <section class="places-grid">
@@ -257,6 +257,8 @@
     
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
+
+      
         AOS.init({
             once: true // Animation will run once
         });
