--- a/project.html
+++ b/project.html
@@ -103,9 +103,10 @@
             font-family: 'Montserrat', sans-serif;
             font-size: 54px;
             margin-bottom: 15px;
-            /* 🎨 COLOR FIX: Using only Neon Blue for gradient */
-            background: linear-gradient(90deg, var(--neon-blue), var(--neon-blue)); 
-            -webkit-background-clip: text;
+           background: linear-gradient(90deg, var(--neon-blue), var(--neon-blue));
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+
             -webkit-text-fill-color: transparent;
             font-weight: 700;
             text-shadow: 0 0 10px rgba(0, 224, 255, 0.6);
