Organize assets and update HTML files

--- a/Amritsar.html
+++ b/Amritsar.html
@@ -187,7 +187,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="golden.png" alt="Golden Temple">
+                    <img src="assets/golden.png" alt="Golden Temple">
                 </div>
                 <div class="card-content">
                     <h3>The Golden Temple (Harmandir Sahib)</h3>
@@ -198,7 +198,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="jallia.png" alt="Jallianwala Bagh">
+                    <img src="assets/jallia.png" alt="Jallianwala Bagh">
                 </div>
                 <div class="card-content">
                     <h3>Jallianwala Bagh</h3>
@@ -209,7 +209,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <div class="card-image-container">
-                    <img src="wagah.png" alt="Wagah Border">
+                    <img src="assets/wagah.png" alt="Wagah Border">
                 </div>
                 <div class="card-content">
                     <h3>Wagah-Attari Border Ceremony</h3>
@@ -220,7 +220,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="Atemple.png" alt="Durgiana Temple">
+                    <img src="assets/Atemple.png" alt="Durgiana Temple">
                 </div>
                 <div class="card-content">
                     <h3>Durgiana Temple (Lakshmi Narayan Temple)</h3>
@@ -231,7 +231,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="museum.png" alt="Partition Museum">
+                    <img src="assets/museum.png" alt="Partition Museum">
                 </div>
                 <div class="card-content">
                     <h3>The Partition Museum</h3>
