--- a/Banaras.html
+++ b/Banaras.html
@@ -188,7 +188,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="kashi.png" alt="Kashi Vishwanath Temple">
+                    <img src="assets/kashi.png" alt="Kashi Vishwanath Temple">
                 </div>
                 <div class="card-content">
                     <h3>Kashi Vishwanath Temple</h3>
@@ -199,7 +199,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="Dghat.png" alt="Dashashwamedh Ghat">
+                    <img src="assets/Dghat.png" alt="Dashashwamedh Ghat">
                 </div>
                 <div class="card-content">
                     <h3>Dashashwamedh Ghat</h3>
@@ -210,7 +210,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <div class="card-image-container">
-                    <img src="sarnath.png" alt="Sarnath">
+                    <img src="assets/sarnath.png" alt="Sarnath">
                 </div>
                 <div class="card-content">
                     <h3>Sarnath - Buddhist Pilgrimage</h3>
@@ -221,7 +221,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="mani.png" alt="Manikarnika Ghat">
+                    <img src="assets/mani.png" alt="Manikarnika Ghat">
                 </div>
                 <div class="card-content">
                     <h3>Manikarnika Ghat</h3>
@@ -232,7 +232,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="fort.png" alt="Ramnagar Fort">
+                    <img src="assets/fort.png" alt="Ramnagar Fort">
                 </div>
                 <div class="card-content">
                     <h3>Ramnagar Fort</h3>
