--- a/Kedarnath.html
+++ b/Kedarnath.html
@@ -188,7 +188,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="kedarnath .png"Kedarnath Temple">
+                    <img src="assets/kedarnath.png" alt="Kedarnath Temple">
                 </div>
                 <div class="card-content">
                     <h3>Kedarnath Temple</h3>
@@ -199,7 +199,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="gaurikund.png" alt="Gaurikund">
+                    <img src="assets/gaurikund.png" alt="Gaurikund">
                 </div>
                 <div class="card-content">
                     <h3>Gaurikund</h3>
@@ -221,7 +221,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="bhagirathi.png" alt="Mandakini River"> 
+                    <img src="assets/bhagirathi.png" alt="Mandakini River"> 
                 </div>
                 <div class="card-content">
                     <h3>Mandakini River</h3>
@@ -232,7 +232,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="himalyan views.png" alt="Himalayan Views">
+                    <img src="assets/himalyan-views.png" alt="Himalayan Views">
                 </div>
                 <div class="card-content">
                     <h3>Himalayan Views & Peaks</h3>
