--- a/Salasar.html
+++ b/Salasar.html
@@ -187,7 +187,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="balaji.png" alt="Salasar Balaji Temple">
+                    <img src="assets/balaji.png" alt="Salasar Balaji Temple">
                 </div>
                 <div class="card-content">
                     <h3>Salasar Balaji Temple</h3>
@@ -198,7 +198,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="fare.png" alt="Temple Fair">
+                    <img src="assets/fare.png" alt="Temple Fair">
                 </div>
                 <div class="card-content">
                     <h3>Annual Festival and Fair</h3>
@@ -209,7 +209,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <div class="card-image-container">
-                    <img src="village.png" alt="Anjani Mata Mandir">
+                    <img src="assets/village.png" alt="Anjani Mata Mandir">
                 </div>
                 <div class="card-content">
                     <h3>Anjani Mata Temple, Laxmangarh</h3>
@@ -220,7 +220,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="dessert.png" alt="Desert Views">
+                    <img src="assets/dessert.png" alt="Desert Views">
                 </div>
                 <div class="card-content">
                     <h3>Local Culture and Thar Desert</h3>
@@ -231,7 +231,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="gathering.png" alt="Pilgrims">
+                    <img src="assets/gathering.png" alt="Pilgrims">
                 </div>
                 <div class="card-content">
                     <h3>Pilgrim Gathering and Seva (Service)</h3>
