--- a/Vrindavan.html
+++ b/Vrindavan.html
@@ -187,7 +187,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                 <div class="card-image-container">
-                    <img src="bakey.png" alt="Bankey Bihari Temple">
+                    <img src="assets/bakey.png" alt="Bankey Bihari Temple">
                 </div>
                 <div class="card-content">
                     <h3>Bankey Bihari Temple</h3>
@@ -198,7 +198,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <div class="card-image-container">
-                    <img src="radha.png" alt="ISKCON Temple">
+                    <img src="assets/radha.png" alt="ISKCON Temple">
                 </div>
                 <div class="card-content">
                     <h3>Krishna-Balaram Mandir (ISKCON)</h3>
@@ -209,7 +209,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <div class="card-image-container">
-                    <img src="radhaR.png" alt="Radha Raman Temple">
+                    <img src="assets/radhaR.png" alt="Radha Raman Temple">
                 </div>
                 <div class="card-content">
                     <h3>Radha Raman Temple</h3>
@@ -220,7 +220,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="ghat.png" alt="Keshi Ghat on Yamuna River">
+                    <img src="assets/ghat.png" alt="Keshi Ghat on Yamuna River">
                 </div>
                 <div class="card-content">
                     <h3>Keshi Ghat (Yamuna River)</h3>
@@ -231,7 +231,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                 <div class="card-image-container">
-                    <img src="nidhivan.png" alt="Nidhivan Sacred Grove">
+                    <img src="assets/nidhivan.png" alt="Nidhivan Sacred Grove">
                 </div>
                 <div class="card-content">
                     <h3>Nidhivan</h3>
