--- a/kerala.html
+++ b/kerala.html
@@ -225,7 +225,7 @@
 
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <div class="card-image-container">
-                    <img src="fortkali.png" alt="Fort Kochi">
+                    <img src="assets/fortkali.png" alt="Fort Kochi">
                 </div>
                 <div class="card-content">
                     <h3>Fort Kochi</h3>
@@ -247,7 +247,7 @@
             
             <div class="place-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">
                 <div class="card-image-container">
-                    <img src="varkala.png" alt="Varkala Cliff Beach">
+                    <img src="assets/varkala.png" alt="Varkala Cliff Beach">
                 </div>
                 <div class="card-content">
                     <h3>Varkala Cliff Beach</h3>
