--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
 <body>
   <!-- Background Video -->
   <video class="video-bg" autoplay muted loop>
-    <source src="login bg3.mp4" type="video/mp4">
+    <source src="assets/login-bg3.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
