--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -20,7 +20,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', 'Montserrat', sans-serif;
-      background: url('suggested bg.png') no-repeat center center fixed;
+      background: url('assets/suggested-bg.png') no-repeat center center fixed;
       background-size: cover;
       color: #1e1c1c;
       min-height: 100vh;
