weather page created

--- a/aboutus.html
+++ b/aboutus.html
@@ -254,8 +254,8 @@
                     </p>
                 </div>
                 <div class="about-images">
-                    <img src="aboutus bg 1.png" alt="Travel Planning">
-                    <img src="about us bg2.png" alt="Destination Discovery">
+                    <img src="assets/aboutus-bg-1.png" alt="Travel Planning">
+                    <img src="assets/about-us-bg2.png" alt="Destination Discovery">
                 </div>
             </div>
         </div>
@@ -265,7 +265,7 @@
         <h2>Meet Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="sejal.png" alt="Sejal">
+                <img src="assets/sejal.png" alt="Sejal">
                 <h3>Sejal</h3>
                 <p>+1 800-123-4567</p>
             </div>
@@ -275,7 +275,7 @@
                 <p>+1 800-111-2222</p>
             </div>
             <div class="team-member">
-                <img src="srishti.png" alt="Srishti">
+                <img src="assets/srishti.png" alt="Srishti">
                 <h3>Srishti</h3>
                 <p>+1 800-987-6543</p>
             </div>
