--- a/ladakh.html
+++ b/ladakh.html
@@ -101,7 +101,7 @@
 
         .badge {
             font-size: 1rem;
-            color: #FF3366;
+            color: var(--primary-blue);
             margin-bottom: 20px;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -111,7 +111,7 @@
             font-family: 'Montserrat', sans-serif;
             font-size: 4rem;
             font-weight: 900;
-            background: linear-gradient(90deg, #FF3366, #B00030, white);
+            background: linear-gradient(90deg, var(--primary-blue), var(--secondary-blue), white);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -137,7 +137,7 @@
             transform: translateX(-50%);
             width: 30px;
             height: 50px;
-            border: 2px solid #FF3366;
+            border: 2px solid var(--primary-blue);
             border-radius: 15px;
             display: flex;
             justify-content: center;
@@ -148,7 +148,7 @@
             content: '';
             width: 4px;
             height: 10px;
-            background: #FF3366;
+            background: var(--primary-blue);
             border-radius: 2px;
             animation: scroll 2s infinite;
         }
