--- a/login.html
+++ b/login.html
@@ -5,83 +5,210 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Login - Plan & Go</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
-    body {
+    :root {
+      --neon-blue: #00bfff;
+      --dark-bg: #1A1E29;
+      --text-light: #f0f8ff;
+      --text-muted: #aeb8c9;
+    }
+
+    * {
       margin: 0;
       padding: 0;
-      font-family: "Poppins", sans-serif;
-      height: 100vh;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--dark-bg);
+      color: var(--text-light);
+      min-height: 100vh;
+      background-image: linear-gradient(rgba(26, 30, 41, 0.8), rgba(26, 30, 41, 0.8)), url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?fit=crop&w=1920&q=80');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       overflow: hidden;
     }
-    .video-bg {
-      position: fixed;
+
+    .navbar {
+      position: absolute;
       top: 0;
-      left: 0;
-      min-width: 100vw;
-      min-height: 100vh;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 50px;
+      background: rgba(26, 30, 41, 0.95);
+      backdrop-filter: blur(5px);
+      font-family: 'Montserrat', sans-serif;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+      z-index: 100;
+      border-bottom: 1px solid rgba(0, 224, 255, 0.3);
     }
+
+    .navbar .logo {
+      font-size: 26px;
+      font-weight: 700;
+      color: var(--neon-blue);
+      text-shadow: 0 0 7px rgba(0, 224, 255, 0.8);
+      letter-spacing: 1px;
+    }
+
+    .navbar a {
+      color: var(--text-muted);
+      font-weight: 600;
+      font-size: 16px;
+      transition: color 0.3s;
+      text-decoration: none;
+    }
+
+    .navbar a:hover {
+      color: var(--neon-blue);
+      text-shadow: 0 0 5px rgba(0, 224, 255, 0.5);
+    }
+
     .container {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(15px);
       padding: 40px;
       border-radius: 15px;
       text-align: center;
       width: 350px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(0, 224, 255, 0.3);
       z-index: 1;
+      margin-top: 80px;
     }
+
     h2 {
       margin-bottom: 10px;
-      color: white;
+      color: var(--text-light);
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
     }
+
     input {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      border: none;
+      border: 1px solid rgba(255, 255, 255, 0.3);
       outline: none;
       border-radius: 8px;
       font-size: 14px;
+      background: rgba(255, 255, 255, 0.1);
+      color: var(--text-light);
+      font-family: 'Poppins', sans-serif;
     }
+
+    input::placeholder {
+      color: var(--text-muted);
+    }
+
     button {
       width: 100%;
       padding: 12px;
       margin-top: 15px;
-      background: #00bfff;
-      color: white;
+      background: var(--neon-blue);
+      color: var(--dark-bg);
       border: none;
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
       transition: 0.3s ease;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      box-shadow: 0 0 15px rgba(0, 224, 255, 0.8);
     }
+
     button:hover {
       background: #0099cc;
+      box-shadow: 0 0 25px var(--neon-blue);
+      transform: translateY(-1px);
     }
+
     a {
-      color: grey;
+      color: var(--text-muted);
       text-decoration: none;
       font-weight: bold;
     }
+
     a:hover {
+      color: var(--neon-blue);
       text-decoration: underline;
+    }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      width: 300px;
+      border: 1px solid var(--neon-blue);
+      box-shadow: 0 0 15px rgba(0, 224, 255, 0.5);
+    }
+
+    .modal-content p {
+      margin-bottom: 20px;
+      color: var(--text-light);
+      font-size: 18px;
+    }
+
+    .modal-content button {
+      margin: 0 10px;
+      padding: 10px 20px;
+      background: var(--neon-blue);
+      color: var(--dark-bg);
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+
+    .modal-content button:hover {
+      background: #0099cc;
+    }
+
+    @media (max-width: 600px) {
+      .navbar {
+        padding: 15px 20px;
+      }
+      .container {
+        width: 90%;
+        margin-top: 100px;
+      }
     }
   </style>
 </head>
 <body>
- 
-  <video class="video-bg" autoplay muted loop>
-    <source src="assets/login-bg3.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+
+  <header class="navbar">
+    <div class="logo">Plan & Go ✈</div>
+    <a href="project.html">Home</a>
+  </header>
 
   <div class="container">
     <h2>Welcome back!</h2>
@@ -90,12 +217,33 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
+    <br>
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+  </div>
+
+  <!-- Success Modal -->
+  <div id="successModal" class="modal">
+    <div class="modal-content">
+      <p>Login Successful!</p>
+      <button id="successOk">OK</button>
+    </div>
+  </div>
+
+  <!-- Error Modal -->
+  <div id="errorModal" class="modal">
+    <div class="modal-content">
+      <p>❌ Invalid Email or Password</p>
+      <button id="errorOk">OK</button>
+    </div>
   </div>
 
   <script>
   window.onload = () => {
     const loginForm = document.getElementById("loginForm");
+    const successModal = document.getElementById("successModal");
+    const errorModal = document.getElementById("errorModal");
+    const successOk = document.getElementById("successOk");
+    const errorOk = document.getElementById("errorOk");
 
     loginForm.addEventListener("submit", (e) => {
       e.preventDefault();
@@ -105,20 +253,25 @@
 
       const savedEmail = localStorage.getItem("userEmail");
       const savedPassword = localStorage.getItem("userPassword");
-      const savedFullName = localStorage.getItem("userFullName");  
+      const savedFullName = localStorage.getItem("userFullName");
 
       if (email === savedEmail && password === savedPassword) {
-        alert("🎉 Login Successful!");
+        successModal.style.display = "flex";
 
-       
-        localStorage.setItem("loggedInUser", JSON.stringify({
-          email: savedEmail,
-          fullname: savedFullName
-        }));
+        successOk.addEventListener("click", () => {
+          localStorage.setItem("loggedInUser", JSON.stringify({
+            email: savedEmail,
+            fullname: savedFullName
+          }));
 
-        window.location.href = "project.html";
+          window.location.href = "project.html";
+        });
       } else {
-        alert("❌ Invalid Email or Password");
+        errorModal.style.display = "flex";
+
+        errorOk.addEventListener("click", () => {
+          errorModal.style.display = "none";
+        });
       }
     });
   }
