--- a/project.html
+++ b/project.html
@@ -486,6 +486,52 @@
             border-top: 1px solid rgba(0, 224, 255, 0.3);
         }
 
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background: var(--card-bg);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+            border: 1px solid var(--neon-blue);
+            box-shadow: 0 0 15px rgba(0, 224, 255, 0.5);
+        }
+
+        .modal-content p {
+            margin-bottom: 20px;
+            color: var(--text-light);
+            font-size: 18px;
+        }
+
+        .modal-content button {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background: var(--neon-blue);
+            color: var(--dark-bg);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: background 0.3s;
+        }
+
+        .modal-content button:hover {
+            background: #0099cc;
+        }
+
 
         /* Responsive Adjustments */
         @media (max-width: 900px) {
@@ -749,6 +795,15 @@
         <p>© 2025 Plan & Go. All rights reserved.</p>
     </footer>
 
+    <!-- Logout Confirmation Modal -->
+    <div id="logoutModal" class="modal">
+        <div class="modal-content">
+            <p>Do you want to logout?</p>
+            <button id="confirmLogout">Yes</button>
+            <button id="cancelLogout">No</button>
+        </div>
+    </div>
+
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     
     <script>
@@ -771,9 +826,18 @@
                     <span style="margin-right:10px; color:var(--neon-blue); font-weight:600;">👋 Hi, ${user.fullname}</span>
                     <a href="#" id="logoutBtn">Logout</a>
                 `;
-                document.getElementById("logoutBtn").addEventListener("click", () => {
+                document.getElementById("logoutBtn").addEventListener("click", (e) => {
+                    e.preventDefault();
+                    document.getElementById("logoutModal").style.display = "flex";
+                });
+
+                document.getElementById("confirmLogout").addEventListener("click", () => {
                     localStorage.removeItem("loggedInUser");
                     window.location.reload();
+                });
+
+                document.getElementById("cancelLogout").addEventListener("click", () => {
+                    document.getElementById("logoutModal").style.display = "none";
                 });
             } else {
                 // User is logged out, show Login and Signup buttons
