--- a/signup.html
+++ b/signup.html
@@ -4,79 +4,252 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
+  <title>Sign Up - Plan & Go</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
-    body {
+    :root {
+      --neon-blue: #00bfff;
+      --dark-bg: #1A1E29;
+      --text-light: #f0f8ff;
+      --text-muted: #aeb8c9;
+    }
+
+    * {
       margin: 0;
       padding: 0;
-      font-family: "Poppins", sans-serif;
-      height: 100vh;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--dark-bg);
+      color: var(--text-light);
+      min-height: 100vh;
+      background-image: linear-gradient(rgba(26, 30, 41, 0.8), rgba(26, 30, 41, 0.8)), url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?fit=crop&w=1920&q=80');
+      background-size: cover;      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       overflow: hidden;
     }
-    .video-bg {
-      position: fixed;
+
+    .navbar {
+      position: absolute;
       top: 0;
-      left: 0;
-      min-width: 100vw;
-      min-height: 100vh;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 50px;
+      background: rgba(26, 30, 41, 0.95);
+      backdrop-filter: blur(5px);
+      font-family: 'Montserrat', sans-serif;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+      z-index: 100;
+      border-bottom: 1px solid rgba(0, 224, 255, 0.3);
     }
+
+    .navbar .logo {
+      font-size: 26px;
+      font-weight: 700;
+      color: var(--neon-blue);
+      text-shadow: 0 0 7px rgba(0, 224, 255, 0.8);
+      letter-spacing: 1px;
+    }
+
+    .navbar a {
+      color: var(--text-muted);
+      font-weight: 600;
+      font-size: 16px;
+      transition: color 0.3s;
+      text-decoration: none;
+    }
+
+    .navbar a:hover {
+      color: var(--neon-blue);
+      text-shadow: 0 0 5px rgba(0, 224, 255, 0.5);
+    }
+
     .container {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(15px);
       padding: 40px;
       border-radius: 15px;
       text-align: center;
       width: 350px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(0, 224, 255, 0.3);
       z-index: 1;
+      margin-top: 80px;
     }
-    h2 { margin-bottom: 10px; color: white; }
-    p { color: rgb(78, 70, 70); margin-bottom: 20px; }
+
+    h2 {
+      margin-bottom: 10px;
+      color: var(--text-light);
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+    }
+
+    p {
+      color: var(--text-muted);
+      margin-bottom: 20px;
+      font-size: 14px;
+    }
+
     input {
-      width: 100%; padding: 12px; margin: 10px 0;
-      border: none; outline: none;
-      border-radius: 8px; font-size: 14px;
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      outline: none;
+      border-radius: 8px;
+      font-size: 14px;
+      background: rgba(255, 255, 255, 0.1);
+      color: var(--text-light);
+      font-family: 'Poppins', sans-serif;
     }
+
+    input::placeholder {
+      color: var(--text-muted);
+    }
+
     button {
-      width: 100%; padding: 12px; margin-top: 15px;
-      background: #00bfff; color: white;
-      border: none; border-radius: 8px;
-      font-size: 16px; cursor: pointer;
+      width: 100%;
+      padding: 12px;
+      margin-top: 15px;
+      background: var(--neon-blue);
+      color: var(--dark-bg);
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
       transition: 0.3s ease;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      box-shadow: 0 0 15px rgba(0, 224, 255, 0.8);
     }
-    button:hover { background: #0099cc; }
-    a { color: grey; text-decoration: none; font-weight: bold; }
-    a:hover { text-decoration: underline; }
+
+    button:hover {
+      background: #0099cc;
+      box-shadow: 0 0 25px var(--neon-blue);
+      transform: translateY(-1px);
+    }
+
+    a {
+      color: var(--text-muted);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      color: var(--neon-blue);
+      text-decoration: underline;
+    }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      width: 300px;
+      border: 1px solid var(--neon-blue);
+      box-shadow: 0 0 15px rgba(0, 224, 255, 0.5);
+    }
+
+    .modal-content p {
+      margin-bottom: 20px;
+      color: var(--text-light);
+      font-size: 18px;
+    }
+
+    .modal-content button {
+      margin: 0 10px;
+      padding: 10px 20px;
+      background: var(--neon-blue);
+      color: var(--dark-bg);
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+
+    .modal-content button:hover {
+      background: #0099cc;
+    }
+
+    @media (max-width: 600px) {
+      .navbar {
+        padding: 15px 20px;
+      }
+      .container {
+        width: 90%;
+        margin-top: 100px;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- Background Video -->
-  <video class="video-bg" autoplay muted loop>
-    <source src="assets/login-bg3.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+
+  <header class="navbar">
+    <div class="logo">Plan & Go ✈</div>
+    <a href="project.html">Home</a>
+  </header>
 
   <div class="container">
     <h2>Create Account</h2>
-    <p>Fill details to start your journey </p>
+    <p>Discover your next adventure</p>
     <form id="signupForm">
       <input type="text" id="fullname" placeholder="Full Name" required>
       <input type="email" id="email" placeholder="Email" required>
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Sign Up</button>
     </form>
+    <br>
     <p>Already have an account? <a href="login.html">Login</a></p>
+  </div>
+
+  <!-- Password Error Modal -->
+  <div id="passwordErrorModal" class="modal">
+    <div class="modal-content">
+      <p>⚠️ Password must be at least 8 characters long and contain @ or #</p>
+      <button id="passwordErrorOk">OK</button>
+    </div>
+  </div>
+
+  <!-- Signup Success Modal -->
+  <div id="signupSuccessModal" class="modal">
+    <div class="modal-content">
+      <p>✅ Account Created Successfully! Now Login.</p>
+      <button id="signupSuccessOk">OK</button>
+    </div>
   </div>
 
   <script>
     const signupForm = document.getElementById("signupForm");
+    const passwordErrorModal = document.getElementById("passwordErrorModal");
+    const signupSuccessModal = document.getElementById("signupSuccessModal");
+    const passwordErrorOk = document.getElementById("passwordErrorOk");
+    const signupSuccessOk = document.getElementById("signupSuccessOk");
 
     signupForm.addEventListener("submit", (e) => {
       e.preventDefault();
@@ -87,7 +260,11 @@
 
       // ✅ Password validation
       if (password.length < 8 || (!password.includes("@") && !password.includes("#"))) {
-        alert("⚠️ Password must be at least 8 characters long and contain @ or #");
+        passwordErrorModal.style.display = "flex";
+
+        passwordErrorOk.addEventListener("click", () => {
+          passwordErrorModal.style.display = "none";
+        });
         return;
       }
 
@@ -96,8 +273,11 @@
       localStorage.setItem("userEmail", email);
       localStorage.setItem("userPassword", password);
 
-      alert("✅ Account Created Successfully! Now Login.");
-      window.location.href = "login.html";
+      signupSuccessModal.style.display = "flex";
+
+      signupSuccessOk.addEventListener("click", () => {
+        window.location.href = "login.html";
+      });
     });
   </script>
 </body>
